Fixed more spacing on the landing page

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -32,14 +32,15 @@ $subFont: 'Raleway', sans-serif;
 }
 .x-position:nth-of-type(1) {
 	z-index: 0;
-	margin-left: -13%;
+	margin-left: -25%;
 }
 .x-position:nth-of-type(2) {
 	z-index: 2;
+	margin-left: -17%;
 }
 .x-position:nth-of-type(3) {
 	z-index: 1;
-	margin-left: 13%;
+	margin-left: -9%;
 }
 .card-primary {
 	.card-header {
@@ -125,6 +126,8 @@ html, body {
 		height: 100vh;
 		@include center;
 		padding-left: 5%;
+		margin-left: 5%;
+		margin-right: 10%;
 		#eduMeetFuture {
 			margin-top: -10vh;
 		}
@@ -152,8 +155,8 @@ html, body {
 	}
 	.nav {
 		height: 4vh;
-		margin-left: 6%;
-		margin-right: 6%;
+		margin-left: 10.5%;
+		margin-right: 14%;
 		margin-top: 2%;
 	}
 	//text styles
